# dag-motivation-exp

./: .gitignore  README.md  RUNBOOK.md  conftest.py  g0_gsm8k.ipynb  pyproject.toml  run_colab.ipynb  run_gsm8k.ipynb
diagnostics/: ab_offline_proxy.py  inspect_frontier.py  offline_false_reject.py  reclassify_cat3.py
docs/: frontier_guided_resampling.md  gsm8k_motivation_plan.md
scripts/: fetch_prontoqa.sh
src/motivation_exp/: __init__.py  _prontoqa_bridge.py  checker.py  config.py  datagen.py  g0_gsm8k.py  grammar.py  gsm8k_datagen.py  gsm8k_grammar.py  gsm8k_runner.py  math_checker.py  plots.py  runner.py
tests/: test_checker.py  test_datagen.py  test_frontier_guided.py  test_g0_gsm8k.py  test_grammar.py  test_gsm8k_datagen.py  test_gsm8k_grammar.py  test_gsm8k_runner.py  test_math_checker.py  test_plots.py  test_rollback.py
tests/fixtures/: synthetic_results.jsonl
